unpackaged/main/default/objects/Services_Project_Partner_Assignment__c/Services_Project_Partner_Assignment__c.object-meta.xml
<CustomObject>
    <label>Services Project Partner Assignment</label>
    <nameField>
        <displayFormat>DPA-{00000}</displayFormat>
        <label>Services Project Partner Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Project Partner Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>