unpackaged/main/default/objects/Services_Project_Partner_Assignment__c/fields/Airbase_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Airbase_PO_Number__c</fullName>
    <label>Airbase PO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>