unpackaged/main/default/objects/Services_Project_Partner_Assignment__c/fields/Delivery_Partner__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Delivery Partner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This Partner Relationship is not record type Service Delivery</errorMessage>
        <filterItems>
            <field>Partner_Relationship__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Service Delivery</value>
        </filterItems>
        <infoMessage>Please select a Service Delivery partner relationship</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Partner_Relationship__c</referenceTo>
    <relationshipLabel>Services Project Partner Assignments</relationshipLabel>
    <relationshipName>Services_Delivery_Partners</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>