unpackaged/main/default/objects/Services_Project_Partner_Assignment__c/fields/Num_Billed_Hours_Planned__c.field-meta.xml
<CustomField>
    <fullName>Num_Billed_Hours_Planned__c</fullName>
    <label># Billed Hours (Planned)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>