unpackaged/main/default/objects/Services_Project_Partner_Assignment__c/fields/Partner_SOW_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_SOW_Number__c</fullName>
    <label>Partner SOW Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>