unpackaged/main/default/objects/Services_Project_Partner_Assignment__c/fields/Services_Project__c.field-meta.xml
<CustomField>
    <fullName>Services_Project__c</fullName>
    <label>Services Project</label>
    <referenceTo>Services_Project__c</referenceTo>
    <relationshipName>Services_Delivery_Partners</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>